samples/_failures_safe/1761692333_cdc55b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a08fbee8.c: In function ‘main’:
./samples/SAFE/__tmp_a08fbee8.c:154:5: error: expected expression at end of input
  154 |     add_matrices(&mat1, &mat2,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_a08fbee8.c:154:5: error: expected declaration or statement at end of input
